--- a/basics/templates/snippets/info_filter.html
+++ b/basics/templates/snippets/info_filter.html
@@ -1,46 +1,171 @@
 {% load filter%}
+        <div class="modal-body" style="padding-bottom: 0px;" id="modal-body">
+            <div class="list-group" style="margin-bottom: 0px;" id="info-list">
                 {% if infos %}
                     {% for info in infos %}
 
-                        <!-- list all needs -->
-                      <div class="list-group-item" id="standard-list-group-item-div">
+                        <!-- list all information -->
                         <div class="row">
-                            <a href="{% url 'basics:information_view' pk=info.id %}">
-                                <div class="col-sm-12">
-                                    <h4 class="list-group-item-heading" style="color: #333; hover.color: #333;">{{ info.headline }}</h4>
-                                    <p class="list-group-item-text" style="color: #555; hover.color: #555; word-wrap: break-word;">{{ info|get_short_text:160 }}</p>
-                                </div>
+                            <div class="col-sm-12">
+                                <a class="list-group-item" id="standard-list-group-item-div" href="{% url 'basics:information_view' pk=info.id %}">
+                                    <div class="row">
+                                        <div class="col-sm-12" data-toggle="modal" data-target=".{{ info.id }}">
+                                            <h4 class="list-group-item-heading">{{ info.headline }}<div style="float: right;"><span class="glyphicon glyphicon-chevron-up"></span>{{ info.number_likes }}</div></h4>
+                                            <p class="list-group-item-text" style="word-wrap: break-word;">{{ info|get_short_text:160 }}</p>
+                                        </div>
+                                        <div class="col-sm-9" data-toggle="modal" data-target=".{{ info.id }}">
+                                            <h6><br><i>from {{ info.date }}{% if info.author_is_admin %} by <span style="color: #D36E5A;">Admin</span>{% elif info.group %} by <span style="color: #70962c;">{{ info.group.name }}</span>{% elif info.author == user %} by <span>you</span>{% endif %}</i></h6>
+                                        </div>
+                                    </div>
+                                </a>
 
-                                <div class="col-sm-9">
-                                    <h6 style="color: #555; hover.color: #555;"><br>priority: {{ info.priority }} / pk: {{ info.pk }} / from: {{ info.date }} / number of reports: {{ info.number_reports }} / group: {{ info.group }}</h6>
+                                <div class="list-group-footer" style="margin-bottom: 15px;">
+                                    {% if user == info.author %}
+                                        <div class="row">
+                                            <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
+                                                <div class="col-sm-12">
+                                                    <span class="glyphicon glyphicon-comment"></span> Comment
+                                                </div>
+                                            </a>
+                                        </div>
+                                    {% else %}
+                                        {% if not user.userdata in info.reported_by.all and not user.userdata in info.liked_by.all %}
+                                            <div class="row">
+                                                <a class="list-group-footer-button" type="button" style="cursor:pointer" id="like{{info.pk}}" onclick="like({{info.pk}})">
+                                                    <div class="col-sm-3" id="list-group-footer-button-margin">
+                                                        <span class="glyphicon glyphicon-chevron-up"></span> Upvote
+                                                    </div>
+                                                </a>
+                                                {% if user.userdata in info.followed_by.all %}
+                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="unfollow{{info.pk}}" onclick="unfollow({{info.pk}})">
+                                                        <div class="col-sm-3" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Unfollow
+                                                        </div>
+                                                    </a>
+                                                {% elif not user.userdata in info.followed_by.all%}
+                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="follow{{info.pk}}" onclick="follow({{info.pk}})">
+                                                        <div class="col-sm-3" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Follow
+                                                        </div>
+                                                    </a>
+                                                {% endif %}
+                                                <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
+                                                    <div class="col-sm-3" id="list-group-footer-button-margin">
+                                                        <span class="glyphicon glyphicon-comment"></span> Comment
+                                                    </div>
+                                                </a>
+                                                <a class="list-group-footer-button" type="button" style="cursor:pointer" id="report{{info.pk}}" onclick="report({{info.pk}})">
+                                                    <div class="col-sm-3">
+                                                        <span class="glyphicon glyphicon-ban-circle"></span> Report
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        {% elif not user.userdata in info.reported_by.all and user.userdata in info.liked_by.all  %}
+                                            <div class="row">
+                                                {% if user.userdata in info.followed_by %}
+                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="unfollow{{info.pk}}" onclick="unfollow({{info.pk}})">
+                                                        <div class="col-sm-4" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Unfollow
+                                                        </div>
+                                                    </a>
+                                                {% elif not user.userdata in info.followed_by.all%}
+                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="follow{{info.pk}}" onclick="follow({{info.pk}})">
+                                                        <div class="col-sm-4" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Follow
+                                                        </div>
+                                                    </a>
+                                                {% endif %}
+                                                <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
+                                                    <div class="col-sm-4" id="list-group-footer-button-margin">
+                                                        <span class="glyphicon glyphicon-comment"></span> Comment
+                                                    </div>
+                                                </a>
+                                                <a class="list-group-footer-button" type="button" style="cursor:pointer" id="report{{info.pk}}" onclick="report({{info.pk}})">
+                                                    <div class="col-sm-4">
+                                                        <span class="glyphicon glyphicon-ban-circle"></span> Report
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        {% elif user.userdata in info.reported_by.all and not user.userdata in info.liked_by.all  %}
+                                            <div class="row">
+                                                <a class="list-group-footer-button" type="button" style="cursor:pointer" id="like{{info.pk}}" onclick="like({{info.pk}})">
+                                                    <div class="col-sm-4" id="list-group-footer-button-margin">
+                                                        <span class="glyphicon glyphicon-chevron-up"></span> Upvote
+                                                    </div>
+                                                </a>
+                                                {% if user.userdata in info.followed_by %}
+                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="unfollow{{info.pk}}" onclick="unfollow({{info.pk}})">
+                                                        <div class="col-sm-4" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Unfollow
+                                                        </div>
+                                                    </a>
+                                                {% elif not user.userdata in info.followed_by.all%}
+                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="follow{{info.pk}}" onclick="follow({{info.pk}})">
+                                                        <div class="col-sm-4" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Follow
+                                                        </div>
+                                                    </a>
+                                                {% endif %}
+                                                <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
+                                                    <div class="col-sm-4">
+                                                        <span class="glyphicon glyphicon-comment"></span> Comment
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        {% elif user.userdata in info.reported_by.all and user.userdata in info.liked_by.all %}
+                                            <div class="row">
+                                                {% if user.userdata in info.followed_by %}
+                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="unfollow{{info.pk}}" onclick="unfollow({{info.pk}})">
+                                                        <div class="col-sm-6" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Unfollow
+                                                        </div>
+                                                    </a>
+                                                {% elif not user.userdata in info.followed_by.all%}
+                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="follow{{info.pk}}" onclick="follow({{info.pk}})">
+                                                        <div class="col-sm-6" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Follow
+                                                        </div>
+                                                    </a>
+                                                {% endif %}
+                                                <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
+                                                    <div class="col-sm-6">
+                                                        <span class="glyphicon glyphicon-comment"></span> Comment
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        {% endif %}
+                                    {% endif %}
                                 </div>
-                            </a>
-                            <div class="col-sm-1">
-                                <button type="button" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:information_view' pk=info.id %}';" style="float: right; margin-top: 10px;"><span class="glyphicon glyphicon-comment"></span> Comment</button>
 
                             </div>
-                            {% if not user.userdata in info.reported_by.all %}
-                              <div class="col-sm-1">
-                                <button type="button" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:report_information' pk=info.id%}';" style="float: right; margin-top: 10px;"><span class="glyphicon glyphicon-alert"></span> Report</button>
-                              </div>
-                            {% else %}
-                              <div class="col-sm-1">
-                                <button type="button" class="btn btn-default btn-sml standard-grey-button-light disabled" onclick="#" style="float: right; margin-top: 10px;"><span class="glyphicon glyphicon-alert"></span> Report</button>
-                              </div>
-                            {% endif %}
-
-                            {% if not user.userdata in info.liked_by.all %}
-                              <div class="col-sm-1">
-                                <button type="button" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:like_information' pk=info.id %}';" style="float: right; margin-top: 10px;"><span class="glyphicon glyphicon-thumbs-up"></span> Like</button>
-                              </div>
-                            {% else %}
-                              <div class="col-sm-1">
-                                <button type="button" class="btn btn-default btn-sml standard-grey-button-light" onclick="location.href='{% url 'basics:unlike_information' pk=info.id %}';" style="float: right; margin-top: 10px;"><span class="glyphicon glyphicon-thumbs-up"></span> Unlike</button>
-                              </div>
-                            {% endif %}
                         </div>
-                      </div>
+
                     {% empty %}
                         <h4>There are no information.</h4>
                     {% endfor %}
                 {% endif %}
+            </div>
+        </div>
+        <div class="modal-footer">
+            <div class="row">
+                <div class="col-xs-12 col-sm-offset-2 col-sm-8 text-center">
+                    <nav>
+                        <ul class="pagination">
+                            <li style="cursor:pointer" {% if 1 == page %}class="disabled"{% endif %}><a id="pagination-left-right" value="{{number}}" onclick="submit_page(this)" aria-label="Previous"><span aria-hidden="true" class="glyphicon glyphicon-menu-left"></span></a></li>
+                            {% for number in page_range %}
+                                {% if number == page %}
+                                    <li class="active"><a id="pagination-number-active" onclick="submit_page(this)" value="{{number}}">{{number}} <span class="sr-only">(current)</span></a></li>
+                                {% else %}
+                                    <li><a id="pagination-number" onclick="submit_page(this)" style="cursor:pointer" value="{{number}}">{{number}}</a></li>
+                                {% endif %}
+                            {% endfor %}
+                            <li>
+                                <a id="pagination-left-right" style="cursor:pointer" onclick="submit_page(this)" value="{{number}}" aria-label="Next">
+                                    <span aria-hidden="true" class="glyphicon glyphicon-menu-right"></span>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
