--- a/basics/templates/snippets/claim_informations.html
+++ b/basics/templates/snippets/claim_informations.html
@@ -18,69 +18,121 @@
                                             </a>
 
                                             <div class="list-group-footer" style="margin-bottom: 15px;">
-                                                {% if user == info.author %}
-                                                    <div class="row">
-                                                        <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
-                                                            <div class="col-sm-12">
-                                                                <span class="glyphicon glyphicon-comment"></span> Comment
-                                                            </div>
-                                                        </a>
+                                    {% if user == info.author %}
+                                        <div class="row">
+                                            <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
+                                                <div class="col-sm-12">
+                                                    <span class="glyphicon glyphicon-comment"></span> Comment
+                                                </div>
+                                            </a>
+                                        </div>
+                                    {% else %}
+                                        {% if not user.userdata in info.reported_by.all and not user.userdata in info.liked_by.all %}
+                                            <div class="row">
+                                                <a class="list-group-footer-button" type="button" style="cursor:pointer" id="like{{info.pk}}" onclick="like({{info.pk}})">
+                                                    <div class="col-sm-3" id="list-group-footer-button-margin">
+                                                        <span class="glyphicon glyphicon-chevron-up"></span> Upvote
                                                     </div>
-                                                {% else %}
-                                                    {% if not user.userdata in info.reported_by.all and not user.userdata in info.liked_by.all %}
-                                                        <div class="row">
-                                                            <a class="list-group-footer-button" type="button" href="{% url 'basics:like_information' pk=info.id %}">
-                                                                <div class="col-sm-4" id="list-group-footer-button-margin">
-                                                                    <span class="glyphicon glyphicon-chevron-up"></span> Upvote
-                                                                </div>
-                                                            </a>
-                                                            <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
-                                                                <div class="col-sm-4">
-                                                                    <span class="glyphicon glyphicon-comment"></span> Comment
-                                                                </div>
-                                                            </a>
-                                                            <a class="list-group-footer-button" type="button" href="{% url 'basics:report_information' pk=info.id%}">
-                                                                <div class="col-sm-4">
-                                                                    <span class="glyphicon glyphicon-ban-circle"></span> Report
-                                                                </div>
-                                                            </a>
+                                                </a>
+                                                {% if user.userdata in info.followed_by.all %}
+                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="unfollow{{info.pk}}" onclick="unfollow({{info.pk}})">
+                                                        <div class="col-sm-3" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Unfollow
                                                         </div>
-                                                    {% elif user.userdata in info.reported_by.all and not user.userdata in info.liked_by.all  %}
-                                                        <div class="row">
-                                                            <a class="list-group-footer-button" type="button" href="{% url 'basics:like_information' pk=info.id %}">
-                                                                <div class="col-sm-6" id="list-group-footer-button-margin">
-                                                                    <span class="glyphicon glyphicon-chevron-up"></span> Upvote
-                                                                </div>
-                                                            </a>
-                                                            <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
-                                                                <div class="col-sm-6">
-                                                                    <span class="glyphicon glyphicon-comment"></span> Comment
-                                                                </div>
-                                                            </a>
+                                                    </a>
+                                                {% elif not user.userdata in info.followed_by.all%}
+                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="follow{{info.pk}}" onclick="follow({{info.pk}})">
+                                                        <div class="col-sm-3" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Follow
                                                         </div>
-                                                    {% elif not user.userdata in info.reported_by.all and user.userdata in info.liked_by.all  %}
-                                                        <div class="row">
-                                                            <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
-                                                                <div class="col-sm-6">
-                                                                    <span class="glyphicon glyphicon-comment"></span> Comment
-                                                                </div>
-                                                            </a>
-                                                            <a class="list-group-footer-button" type="button" href="{% url 'basics:report_information' pk=info.id%}">
-                                                                <div class="col-sm-6">
-                                                                    <span class="glyphicon glyphicon-ban-circle"></span> Report
-                                                                </div>
-                                                            </a>
-                                                        </div>
-                                                    {% else %}
-                                                        <div class="row">
-                                                            <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
-                                                                <div class="col-sm-12">
-                                                                    <span class="glyphicon glyphicon-comment"></span> Comment
-                                                                </div>
-                                                            </a>
-                                                        </div>
-                                                    {% endif %}
+                                                    </a>
                                                 {% endif %}
+                                                <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
+                                                    <div class="col-sm-3" id="list-group-footer-button-margin">
+                                                        <span class="glyphicon glyphicon-comment"></span> Comment
+                                                    </div>
+                                                </a>
+                                                <a class="list-group-footer-button" type="button" style="cursor:pointer" id="reportInfo{{info.pk}}" onclick="reportInfo({{info.pk}})">
+                                                    <div class="col-sm-3">
+                                                        <span class="glyphicon glyphicon-ban-circle"></span> Report
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        {% elif not user.userdata in info.reported_by.all and user.userdata in info.liked_by.all  %}
+                                            <div class="row">
+                                                {% if user.userdata in info.followed_by.all %}
+                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="unfollow{{info.pk}}" onclick="unfollow({{info.pk}})">
+                                                        <div class="col-sm-4" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Unfollow
+                                                        </div>
+                                                    </a>
+                                                {% elif not user.userdata in info.followed_by.all%}
+                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="follow{{info.pk}}" onclick="follow({{info.pk}})">
+                                                        <div class="col-sm-4" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Follow
+                                                        </div>
+                                                    </a>
+                                                {% endif %}
+                                                <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
+                                                    <div class="col-sm-4" id="list-group-footer-button-margin">
+                                                        <span class="glyphicon glyphicon-comment"></span> Comment
+                                                    </div>
+                                                </a>
+                                                <a class="list-group-footer-button" type="button" style="cursor:pointer" id="reportInfo{{info.pk}}" onclick="reportInfo({{info.pk}})">
+                                                    <div class="col-sm-4">
+                                                        <span class="glyphicon glyphicon-ban-circle"></span> Report
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        {% elif user.userdata in info.reported_by.all and not user.userdata in info.liked_by.all  %}
+                                            <div class="row">
+                                                <a class="list-group-footer-button" type="button" style="cursor:pointer" id="like{{info.pk}}" onclick="like({{info.pk}})">
+                                                    <div class="col-sm-4" id="list-group-footer-button-margin">
+                                                        <span class="glyphicon glyphicon-chevron-up"></span> Upvote
+                                                    </div>
+                                                </a>
+                                                {% if user.userdata in info.followed_by.all %}
+                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="unfollow{{info.pk}}" onclick="unfollow({{info.pk}})">
+                                                        <div class="col-sm-4" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Unfollow
+                                                        </div>
+                                                    </a>
+                                                {% elif not user.userdata in info.followed_by.all%}
+                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="follow{{info.pk}}" onclick="follow({{info.pk}})">
+                                                        <div class="col-sm-4" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Follow
+                                                        </div>
+                                                    </a>
+                                                {% endif %}
+                                                <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
+                                                    <div class="col-sm-4">
+                                                        <span class="glyphicon glyphicon-comment"></span> Comment
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        {% elif user.userdata in info.reported_by.all and user.userdata in info.liked_by.all %}
+                                            <div class="row">
+                                                {% if user.userdata in info.followed_by.all %}
+                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="unfollow{{info.pk}}" onclick="unfollow({{info.pk}})">
+                                                        <div class="col-sm-6" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Unfollow
+                                                        </div>
+                                                    </a>
+                                                {% elif not user.userdata in info.followed_by.all%}
+                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="follow{{info.pk}}" onclick="follow({{info.pk}})">
+                                                        <div class="col-sm-6" id="list-group-footer-button-margin">
+                                                            <span class="glyphicon glyphicon-bookmark"></span> Follow
+                                                        </div>
+                                                    </a>
+                                                {% endif %}
+                                                <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
+                                                    <div class="col-sm-6">
+                                                        <span class="glyphicon glyphicon-comment"></span> Comment
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        {% endif %}
+                                    {% endif %}
                                             </div>
 
                                         </div>
